frontend/test/should_fail/index_exec_model.gm
node class N
{
	i : int;
}

edge class E
{
	i : int;
}

index fooi { N.i }
index bari { E.i }
